lang/tests/contract/common/ui/fail/48-invalid-mock-context-getter-3.rs
use liquid_lang as liquid;

#[liquid::interface(name = auto)]
mod foo {
    extern "liquid" {
        #[liquid(mock_context_getter = "another_getter")]
        fn foo(&self);
        #[liquid(mock_context_getter = "another_another_getter")]
        fn foo(&self, i: i8);
    }
}

fn main() {}